bk_ida/gccida/g0/eliminate_regs_in_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3417:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
old_body = ( rtx)insn[2]; 
                 ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3422:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3442:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
base = ( rtx)old_set[1]; 
             ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3459:23: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
? (  struct rtx_def *)prev_insn[2] 
                      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3466:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
base = ( rtx)prev_set[1]; 
             ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3484:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( rtx)insn[2]; 
           ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3543:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( rtx)insn[2]; 
           ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3553:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)old_set[1]; 
               ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3564:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
vec->elem[0] = ( rtx)insn[2]; 
                     ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3579:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_operands; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3581:19: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
orig_operand[i] = recog_data_0.operand[i]; 
                  ^~~~~~~~~~~~
                  recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3582:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
substed_operand[i] = recog_data_0.operand[i]; 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3583:21: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( insn_is_asm || insn_data_0[icode].operand[i].eliminable ) 
                    ^~~~~~~~~~~
                    insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3585:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] && *( _WORD *)orig_operand[i] == 61 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3597:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v10 = eliminate_regs( recog_data_0.operand[i], VOIDmode, v9); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3604:2: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*recog_data_0.operand_loc[i] = 0LL; 
 ^~~~~~~~~~~~
 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3605:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3615:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_dups; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/reload1.c:3616:2: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*recog_data_0.dup_loc[i] = *recog_data_0.operand_loc[recog_data_0.dup_num[i]]; 
 ^~~~~~~~~~~~
 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eliminate_regs_in_insn/src/obj/reload1.o] Error 1
